# intelnav

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/actions/: intelnav-cli-pack.sh
.github/workflows/: ci.yml  intelnav-release.yml
crates/app/src/: browser.rs  catalog.rs  cmd.rs  slash.rs
crates/app/src/tui/: mod.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: browser.rs  catalog.rs  chain_driver.rs  cmd.rs  contribute.rs  delta.rs  local.rs  main.rs  slash.rs  swarm_contribute.rs  swarm_node.rs
crates/cli/src/tui/: mod.rs
crates/core/src/: config.rs  error.rs  tier.rs
crates/crypto/: README.md
crates/gateway/: Cargo.toml
crates/gateway/src/: api.rs  driver.rs  lib.rs  server.rs  state.rs
crates/gateway/static/: index.html
crates/gateway/tests/: demo_routes.rs
crates/model-store/: Cargo.toml
crates/model-store/examples/: probe_meta.rs
crates/model-store/src/: gguf.rs  lib.rs  metadata.rs
crates/net/: Cargo.toml
crates/net/src/: dht.rs  directory.rs  lib.rs  swarm.rs  swarm_index.rs
crates/runtime/: Cargo.toml  README.md
docs/: onboarding-host.md  onboarding-user.md
scripts/: demo.sh  install-libllama.sh  install.sh  local-swarm.sh
specs/: security-v1.md
