[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/wire",
    "crates/crypto",
    "crates/net",
    "crates/cli",
    "crates/registry",
    "crates/runtime",
    "crates/ggml",
    "crates/model-store",
]

[workspace.package]
version      = "0.1.0"
edition      = "2021"
rust-version = "1.88"
license      = "Apache-2.0"
authors      = ["IntelNav Project"]
homepage     = "https://intelnav.io"
repository   = "https://github.com/intelnav/intelnav"

[workspace.dependencies]
# core async + error
tokio        = { version = "1", features = ["full"] }
futures      = "0.3"
futures-util = "0.3"
anyhow       = "1"
thiserror    = "2"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# serde + codecs
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
ciborium     = "0.2"
bytes        = "1"
hex          = { version = "0.4", features = ["serde"] }

# crypto
ed25519-dalek = { version = "2", features = ["rand_core", "serde"] }
x25519-dalek  = { version = "2", features = ["static_secrets", "serde"] }
aes-gcm       = "0.10"
blake3        = "1"
bs58          = "0.5"
sha2          = "0.10"
rand          = "0.8"
rand_core     = { version = "0.6", features = ["std"] }

# http (registry coordinator + chunk server + model downloader client)
reqwest      = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
axum         = { version = "0.7", features = ["json", "macros"] }
tower        = "0.5"
tower-http   = { version = "0.6", features = ["cors", "trace"] }

# tui + cli
clap         = { version = "4", features = ["derive", "env", "color"] }
ratatui      = "0.29"
crossterm    = "0.28"

# config & paths
directories  = "5"
toml         = "0.8"
mdns-sd      = "0.11"
async-trait  = "0.1"
if-addrs     = "0.13"
async-stream = "0.3"

# inference runtime
tokenizers          = { version = "0.21", default-features = false, features = ["onig"] }
sysinfo             = "0.38"
half                = "2"

# internal
intelnav-core    = { path = "crates/core" }
intelnav-wire    = { path = "crates/wire" }
intelnav-crypto  = { path = "crates/crypto" }
intelnav-net     = { path = "crates/net" }
intelnav-registry = { path = "crates/registry" }
intelnav-runtime  = { path = "crates/runtime" }
intelnav-model-store = { path = "crates/model-store" }

[profile.release]
opt-level   = 3
lto         = "thin"
codegen-units = 1
strip       = "symbols"
panic       = "abort"

[profile.dev]
opt-level   = 0
debug       = 1
