[package]
name        = "intelnav-cli"
description = "`intelnav` — user-facing CLI for the IntelNav network."
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true

[[bin]]
name = "intelnav"
path = "src/main.rs"

[dependencies]
intelnav-core    = { workspace = true }
intelnav-crypto  = { workspace = true }
intelnav-runtime = { workspace = true }
intelnav-ggml    = { path = "../ggml" }

tokio         = { workspace = true }
futures       = { workspace = true }
futures-util  = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
anyhow        = { workspace = true }
thiserror     = { workspace = true }
tracing       = { workspace = true }
tracing-subscriber = { workspace = true }

clap          = { workspace = true }
ratatui       = { workspace = true }
crossterm     = { workspace = true }
reqwest       = { workspace = true }
bytes         = { workspace = true }
directories   = { workspace = true }
toml          = { workspace = true }
hex           = { workspace = true }
async-stream  = { workspace = true }
unicode-width = "0.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = []
# CUDA / Metal selection now happens at libllama-load time (which
# `libllama-<backend>.so` is dlopen'd, plus `INTELNAV_NGL`). Keeping
# empty no-op features so existing CI invocations like
# `cargo build -p intelnav-cli --features cuda` don't break.
cuda    = []
metal   = []
