[package]
name        = "intelnav-runtime"
description = "Layer-range inference runtime over the IntelNav-patched libllama (ggml)."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true

[dependencies]
intelnav-core = { workspace = true }
intelnav-wire = { workspace = true }
intelnav-ggml = { path = "../ggml" }
intelnav-model-store = { workspace = true }

tokenizers = { workspace = true }

anyhow    = { workspace = true }
thiserror = { workspace = true }
tracing   = { workspace = true }
serde     = { workspace = true }
sysinfo   = { workspace = true }
half      = { workspace = true }
tokio     = { workspace = true }
bytes     = { workspace = true }
rand      = { workspace = true }
blake3    = { workspace = true }
bs58      = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
clap               = { workspace = true }

[[example]]
name = "smoke_load"
path = "examples/smoke_load.rs"

[[example]]
name = "generate"
path = "examples/generate.rs"

[[example]]
name = "probe"
path = "examples/probe.rs"

[[example]]
name = "bench_chain"
path = "examples/bench_chain.rs"

[[example]]
name = "bench_ggml"
path = "examples/bench_ggml.rs"
